# ROLL

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: ekf.yaml  navsat.yaml  params_eulongterm_mapping.yaml  params_kitti_mapping.yaml  params_mapping_dxl.yaml  params_mapping_nclt.yaml  params_nclt_loc.yaml  params_nclt_loc_surf_only.yaml  params_nclt_mapping.yaml  params_nclt_mappingGT.yaml  params_sw_loc_realtime.yaml  params_sw_mapping_realtime.yaml  params_usyd_loc.yaml  params_usyd_mapping.yaml  params_vlp16.yaml  params_wheelchair_loc.yaml  params_wheelchair_mapping.yaml
config/for_fastlio/: velodyne_nclt.yaml  velodyne_usyd.yaml
include/: Factors.h  LOAMmapping.h  Scancontext.h  globalOpt.h  lidarFactor.hpp  tic_toc.h  utility.h
include/MISC/: TEASERmanager.h  UnaryFactorTODO.h  occupancyGridGenerator.h
launch/: GTmapping_nclt.launch  fastlio_mapping.launch  loc_nclt.launch  loc_nclt_surf_only.launch  loc_sw_realtime.launch  loc_usyd.launch  loc_wheelchair.launch  mapping_dxl.launch  mapping_eulongterm.launch  mapping_kitti.launch  mapping_livox.launch  mapping_nclt.launch  mapping_sw_realtime.launch  mapping_usyd.launch  mapping_wheelchair.launch  run_fordav.launch  run_odom_save.launch
launch/include/: module_loam.launch  module_navsat.launch  module_robot_state_publisher.launch  module_rviz.launch
launch/include/config/: robot.urdf.xacro  robot_nclt.urdf.xacro  robot_usyd.urdf.xacro  rviz.rviz  rviz_backup.rviz
matlab/: 0511_fastlio_loc.fig  KF_fusion.m~  KF_fusion_TODO.m  T.txt  convertToTUM.m  custumizedFunctions.m  data_deng.m  errorDist.m  errorDist.m~  errorDistAll.m  errorDistAll.m~  errorDistAll_LOAM.m  errorDistCompare.m  errorDistLOAM.m  errorDistLOAM.m~  error_dist_GM.m  error_dist_fastlio.m  error_dist_fastlio.m~  extrensicsCalc.m  loc_results.xls  loc_resultsNEW.xls  loc_results_v2.xls  loc_results_v3.xls  log.txt  stacked_bars.m  test.m  test.m~  test.txt  testGTSAM.m  usydGPS.m  usydGPS.m~
matlab/HILTIbenchmark/: convertToWXYZ.m  error_dist_fastlio.m
matlab/ROLL_eval/: errorDistRoll2.m
msg/: cloud_info.msg
scripts/: DXL_pcd_to_bag.py  nclt_data2bag_BIN.py  nclt_data2bag_BIN_add.py  nclt_data2bag_SYNC.py  odom_publisher_11_09_21.py  sensordata_to_rosbag_fastlio.py
scripts/MISC/: arc_control.py  imuPlot.py  imuPlotUnref_TODO.py  odom_publisher_new_wheelSpeed.py  rec_control.py  test.py  topicSub.py  topicSubInClass.py
src/: Scancontext.cpp  globalOpt.cpp  globalOptCERES.cpp  globalOptNode.cpp  lidarOdometry.cpp  lidarOdometryLOAM.cpp  lidarOdometry_loamXYZ.cpp  mapOptimizationGT.cpp  mapOptimizationGTori.cpp  mapOptimizationWithFastlioNOneed.cpp  mapOptmization.cpp  mapOptmizationGlobalMatchingPerFrame.cpp  mapOptmizationOPTperFrame.cpp  mapOptmizationSLAM_TODO.cpp  mapOptmizationSurfOnly.cpp  mapOptmizationWithLousyOdometry.cpp  odom_save.cpp  scanRegistration.cpp
srv/: save_map.srv
